# neetan-manager

./: .gitignore  LICENSE  README.md  deno.json  index.html  package.json  tsconfig.json
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: setup.json
src-tauri/src/: commands.rs  config.rs  database.rs  dto.rs  lib.rs  main.rs  model.rs  repository.rs  state.rs
src-tauri/src/dto/: game.rs
src-tauri/src/migrations/: 001_initial.sql
src-tauri/src/model/: config.rs  metadata.rs
src-tauri/src/repository/: config.rs  metadata.rs  system_config.rs
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx  gameMenuItems.ts
src/components/FirstSetup/: FirstSetup.css  FirstSetupApp.tsx
src/components/GameGrid/: GameGrid.css  GameGrid.tsx
src/components/GameTable/: GameTable.css  GameTable.tsx
src/components/MenuBar/: MenuBar.css  MenuBar.tsx  MenuDropdown.tsx  ThemeToggle.tsx
src/components/Modal/: AddGameModal.tsx  Button.tsx  DeleteGameModal.tsx  (+10 more)
src/data/: demoUpsertConfigs.ts  games.ts  systemDefaults.ts  systems.ts
src/hooks/: useAppVersion.ts  useEscapeKey.ts  useFilteredGames.ts  useGameLibrary.ts  useOnClickOutside.ts  useTheme.ts
src/i18n/: index.ts  types.d.ts
src/icons/: Icons.tsx
src/lib/: api.ts  copy.ts  dto.ts  gameSerialization.test.ts  gameSerialization.ts  paths.test.ts  paths.ts
src/state/: AppContext.tsx  types.ts
src/styles/: base.css  layout.css  tokens.css
(+31 files in other folders)
