[package]
name = "neetan-manager"
version = "0.1.0"
description = "A configuration manager for Neetan"
authors = ["Nils Hasenbanck"]
edition = "2024"

[lib]
name = "neetan_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
